# chencrafts

./: .gitignore  MANIFEST.in  README.md  meta.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish_to_pypi.yml
chencrafts/: .gitignore  __init__.py  setup.py
chencrafts/bsqubits/: __init__.py  basis_n_states.py  batched_custom_sweeps.py  batched_sweeps_recipe.py  cat_ideal.py  cat_real.py  cat_recipe.py  derive_var.py  ec_systems.py  error_rate_outdated.py  error_rates.py  ideal_cat.py  ideal_qec.py  qoc_init.py  sims_n_sweeps.py  states.py  sweep_utils.py  sweeps.py  systems.py
chencrafts/bsqubits/QEC_graph/: __init__.py  cat_tree.py  edge.py  graph.py  node.py  settings.py  utils.py
chencrafts/bsqubits/QEC_trajectory/: __init__.py  edge.py  graph.py  node.py
chencrafts/core/: funcs.py
chencrafts/cqed/: __init__.py  block_diag.py  crit_photon_num.py  custom_sweeps.py  decoherence.py  dynamics.py  flexible_sweep.py  mode_assignment.py  proc_repr.py  pulses.py  qt_helper.py  scq_helper.py  spec_poly_fit.py  special_states.py  states_n_oprts.py
chencrafts/cqed/custom_sweeps/: __init__.py  crit_photon_num.py  decoherence.py  general.py  utils.py
chencrafts/fluxonium/: __init__.py  analyzer_frf.py  batched_sweep_fif.py  batched_sweep_frf.py
chencrafts/operations/: __init__.py  pulses.py
chencrafts/projects/: __init__.py  fluxonium_tunable_coupler.py  protomon_disorder.py  protomon_full_disorder.py
chencrafts/projects/nonstandard_2qbasis_gates/: synth.py
chencrafts/specfit/: __init__.py  extract_peaks.py  fit.py  spec_fit_toolbox.py
chencrafts/tests/: test_funcs.py
chencrafts/toolbox/: __init__.py  data_processing.py  funcs.py  gadgets.py  optimize.py  plot.py  save.py  small_tools.py
tests/: test_optimization.py
