[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "chencrafts/version.py"
fallback_version = "0.1.0"

[project]
name = "chencrafts"
description = "A personal toolbox for superconducting qubits and quantum mechanics."
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
authors = [
    { name = "Danyang Chen", email = "DanyangChen2026@u.northwestern.edu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows"
]
keywords = ["personal toolbox", "superconducting qubits", "quantum mechanics"]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
    "tqdm",
    "dill",
    "pathos",
    "scqubits",
    "IPython"
]


[project.urls]
Homepage = "https://github.com/Harrinive/chencrafts"
Repository = "https://github.com/Harrinive/chencrafts"

[project.optional-dependencies]
cqed = ["torch>=1.7", "multiprocess"]
bsqubits = ["networkx>=2.4"]
